--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "MIT",
@@ -19,6 +19,7 @@
     "inquirer": "^7.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^27.0.1",
     "jest": "^24.9.0"
   }
 }
